--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <p></p>
   <main role="main" class="inner cover">
       <p></p>
-    <h1 class="cover-heading">BANCOS</h1>
+    <h2 class="cover-heading">BANCOS</h2>
     <p>Itaú</p>
     <p>Bradesco</p>
     <p>NuBank</p>
@@ -78,16 +78,22 @@
   </main>
 
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">Contato</h1>
+    <h2 class="cover-heading">Contato</h2>
     <p>John Houston</p>
     <p>(35) 9 9812-3977</p>
+
+    <h3>Redes Sociais</h1>
+      <p></p>
+      <p><a href="https://www.twitch.tv/johnzinhw">Twitch</a></p>
   </main>
 
    
 
   <footer class="mastfoot mt-auto">
     <div class="inner">
-      <p>Notorious Development, by Johnzinhw</a>.</p>
+      
+      <p>Notorious Development, <a href="http://instagram.com/johnzinhw">by Johnzinhw.</a></p>
+      
     </div>
   </footer>
 </div>
