--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
   </main>
 
   <main role="main" class="inner cover">
-    
-   
+    <h2 class="cover-heading">Contato</h2>
+    <p>John Houston</p>
+    <p>(35) 9 9812-3977</p>
   </main>
    
 
@@ -88,9 +89,6 @@
     <div class="inner">
 
       <h3>WhatsApp</h3>
-      <p>John Houston</p>
-      <p>(35) 9 9812-3977</p>
-
       <h3>Redes Sociais</h3>
         <p><a href="https://www.twitch.tv/johnzinhw">Twitch</a></p>
    
