--- a/index.html
+++ b/index.html
@@ -71,17 +71,15 @@
   <main role="main" class="inner cover">
       <p></p>
     <h2 class="cover-heading">BANCOS</h2>
-    <p>Itaú;</p>
-    <p>Bradesco;</p>
-    <p>NuBank;</p>
-    <p>Caixa;</p>
-    <p>Santander.</p>
+    <li>Itaú;</li>
+    <li>Bradesco;</li>
+    <li>NuBank;</li>
+    <li>Caixa;</li>
+    <li>Santander.</li>
   </main>
 
   <main role="main" class="inner cover">
-    <h2 class="cover-heading">Contato</h2>
-    <p>John Houston</p>
-    <p>(35) 9 9812-3977</p>
+    
   </main>
    
 
@@ -89,10 +87,11 @@
     <div class="inner">
 
       <h3>WhatsApp</h3>
+      <p><a href="https://api.whatsapp.com/send?phone=5535998123977&text=John%20-%20Stark%20Coins">John Houston</a></p>
       <h3>Redes Sociais</h3>
         <p><a href="https://www.twitch.tv/johnzinhw">Twitch</a></p>
    
-      <p>Notorious Development, <a href="http://instagram.com/johnzinhw">by Johnzinhw.</a></p>
+      <p>Notorious Development, <a href="http://instagram.com/johnzinhw"></a>by Johnzinhw.</a></p>
       
     </div>
   </footer>
