--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@
   <main role="main" class="inner cover">
       <p></p>
     <h2 class="cover-heading">BANCOS</h2>
-    <li>Itaú;</li>
-    <li>Bradesco;</li>
-    <li>NuBank;</li>
-    <li>Caixa;</li>
-    <li>Santander.</li>
+    <p><li> Itaú </li></p>
+    <p><li>Itaú;</li></p>
+    <p><li>Bradesco;</li></p>
+    <p><li>NuBank;</li></p>
+    <p><li>Caixa;</li></p>
+    <p><li>Santander.</li></p>
   </main>
 
   <main role="main" class="inner cover">
