--- a/index.html
+++ b/index.html
@@ -63,21 +63,24 @@
     <li>750 TC - R$ 141,00</li>
     <li>1000 TC - R$ 188,00</li>
     <li>5000 TC - R$ 940,00</li>
-
-    
+   
   </main>
 
   <p></p>
+
+
   <main role="main" class="inner cover">
       <p></p>
     <h2 class="cover-heading">BANCOS</h2>
-    <p><li> Itaú </li></p>
-    <p><li>Itaú;</li></p>
-    <p><li>Bradesco;</li></p>
-    <p><li>NuBank;</li></p>
-    <p><li>Caixa;</li></p>
-    <p><li>Santander.</li></p>
+    <p>Itaú</p>
+    <p>Bradesco</p>
+    <p>NuBank</p>
+    <p>Caixa</p>
+    <p>Santander</p>
   </main>
+
+
+
 
   <main role="main" class="inner cover">
     
