--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
       <p><a href="https://api.whatsapp.com/send?phone=5535998123977&text=John%20-%20Stark%20Coins">John Houston</a></p>
       <h3>Redes Sociais</h3>
         <p><a href="https://www.twitch.tv/johnzinhw">Twitch</a></p>
+        <p><a href="https://www.instagram.com/johnzinhw/">Instagram</a></p>
+        <p><a href="https://www.facebook.com/Johnzinhw95">Facebook</a></p>
    
       <p>Notorious Development, <a href="http://instagram.com/johnzinhw"></a>by Johnzinhw.</a></p>
       
