--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <h3>Bancos</h3>
           <h1 class="featurette-heading"> <span class="text-muted"></span></h1>
           <p class="lead">Modos de pagamentos via:
-            <h2>Contando com a novidade do momento: PIX também!</h2>
+            <p>Contando com a novidade do momento: PIX também!</p>
 
             <li>Bradesco;</li>
             <li>Caixa; </li>
